# protobuf-c

./: .bazelrc  .commit_docs.sh  .gitattributes  .gitignore  .travis.yml  BUILD  CHANGELOG.md  CMakeLists.txt  CNAME  ChangeLog  ChangeLog.old  Doxyfile  Doxyfile.in  LICENSE  Makefile.am  Package.swift  README.md  TODO  WORKSPACE  aminclude_doxygen.am  annotated.html  annotated.js  annotated_dup.js  autogen.sh  base.bzl  bootstrap  classes.html  configure.ac  dir_2c96eb53f97134aa5468aeff4257fb45.html  functions.html  functions_vars.html  gencode.html  group__api.html  group__api.js  index.html  jquery.js  libprotobuf-c.pc.in  meson.build  meson_options.txt  modules.html  (+38 more)
.github/workflows/: build.yml  cifuzz.yml  create_release.yml  msvc_bin.yml  quick_build_and_archive.yml
build-cmake/: .gitignore  CMakeLists.txt  Config.cmake.in  build.bat  build_debug.bat
compiler/: c_bytes_field.cc  c_enum.cc  c_generator.cc  c_helpers.cc  c_primitive_field.h  c_service.cc
debian/: Dockerfile  control  setup.sh
doc/: c-code-generator.html  c-code-generator.xml
m4/: gcov.m4  valgrind-tests.m4
protobuf-c/: BUILD  Makefile  libprotobuf-c.pc.in  libprotobuf-c.sym  protobuf-c-list.c  protobuf-c-list.h  protobuf-c-private.h  protobuf-c.c  protobuf-c.cmake  protobuf-c.h  protobuf-c.proto  protobuf-lex.c  protobuf-lex.l  protobuf-yacc.c  protobuf-yacc.h  protobuf-yacc.y
protobuf-c-rpc/: gsklistmacros.h  libprotobuf-c-rpc.pc.in  protobuf-c-data-buffer.c  protobuf-c-data-buffer.h  protobuf-c-dispatch.c  protobuf-c-dispatch.h  protobuf-c-rpc-client.c  protobuf-c-rpc-server.c  protobuf-c-rpc.c  protobuf-c-rpc.h
protobuf-c-rpc/example/: example-client.c
protobuf-c-rpc/sctp-rpc/: example-client.c  example.proto  rfc-protobuf-sctp.ms
protobuf-c-rpc/simplerpc/: simplerpc.c  simplerpc.h
protobuf-c-rpc/t/: test-rpc.c
protobuf-c/include/protobuf-c/: protobuf-c.h
protoc-c/: c_bytes_field.cc  c_bytes_field.h  c_enum.cc  c_enum.h  c_enum_field.cc  c_enum_field.h  c_extension.cc  c_extension.h  c_field.cc  c_field.h  c_file.cc  c_file.h  c_generator.cc  c_generator.h  c_helpers.cc  c_helpers.h  c_message.cc  c_message.h  c_message_field.cc  c_message_field.h  c_options.h  c_primitive_field.cc  c_primitive_field.h  c_service.cc  c_service.h  c_string_field.cc  c_string_field.h  main.cc  options.h
protoc-gen-c/: c_bytes_field.cc  c_bytes_field.h  c_enum.cc  c_enum.h  c_enum_field.cc  c_enum_field.h  c_extension.cc  c_extension.h  c_field.cc  c_field.h  c_file.cc  c_file.h  c_generator.cc  c_generator.h  c_helpers.cc  c_helpers.h  c_message.cc  c_message.h  c_message_field.cc  c_message_field.h  c_primitive_field.cc  c_primitive_field.h  c_service.cc  c_service.h  c_string_field.cc  c_string_field.h  compat.h  main.cc
rpc/example/: example-server.c  example.database
rpc/sctp-rpc/: example-server.c  example-word-funcs-service.c  render-rfc
scripts/: assert-version-numbers-match  get-structure-packing-info  pkgwrite
src/: CMakeLists.txt  Makefile.am
src/google/protobuf-c/: gsklistmacros.h  gskrbtreemacros.h  protobuf-c-data-buffer.c  protobuf-c-data-buffer.h  protobuf-c-dispatch.c  protobuf-c-dispatch.h  protobuf-c-parser.h  protobuf-c-private.h  protobuf-c-rpc.c  protobuf-c-rpc.h  protobuf-c.c  protobuf-c.h
src/google/protobuf/compiler/c/: c_bootstrap_unittest.cc  c_bytes_field.cc  c_bytes_field.h  c_enum.cc  c_enum.h  c_enum_field.cc  c_enum_field.h  c_extension.cc  c_extension.h  c_field.cc  c_field.h  c_file.cc  c_generator.cc  c_generator.h  c_helpers.cc  c_helpers.h  c_message.cc  c_message.h  c_message_field.cc  c_message_field.h  c_primitive_field.cc  c_primitive_field.h  c_service.cc  c_service.h  c_string_field.cc  c_string_field.h  c_unittest.cc
src/sctp-rpc/: example-server-2.c  example-word-funcs-service.h  protobuf-c-sctp.h  sctp-channel.c
src/simplerpc/: simplerpc.c  simplerpc.h  simplerpc.proto
src/test/: CMakeLists.txt  Makefile.am  README  common-test-arrays.h  cxx-generate-packed-data.cc  example-client.c  example-server.c  test-full.proto  test-generated-code.c  test-generated-code2.c  test-rpc.c  test.proto
t/: BUILD  CMakeLists.txt  README  test-full.proto  test-optimized.proto  test-proto3.proto  test.proto
t/addressbook_example/: Makefile  README  add_person.cc  addressbook.pb-c.c  addressbook.pb-c.h  addressbook.pb.cc  addressbook.pb.h  addressbook.proto  list_people.c
t/generated-code/: test-generated-code.c
t/generated-code2/: cxx-generate-packed-data.cc  test-generated-code2.c
t/issue204/: .gitignore  BUILD  issue204.c  issue204.proto
t/issue220/: BUILD  issue220.c  issue220.proto
t/issue251/: BUILD  issue251.proto
t/issue330/: .gitignore  BUILD  issue330.c  issue330.proto
t/issue375/: .gitignore  BUILD  issue375.c  issue375.proto
t/issue389/: issue389.proto
t/issue440/: .gitignore  BUILD  issue440.c  issue440.proto
t/issue745/: .gitignore  issue745.c  issue745.proto
t/json_name/: .gitignore  json_name.c  json_name.proto
t/parser/: test-parser.c
t/test-generated-code/: test-generated-code.c
t/test-generated-code2/: cxx-generate-packed-data.cc  test-generated-code2.c
t/version/: version.c
